Devops/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elan-api-deployment
  labels:
    app: elan-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elan-api
  template:
    metadata:
      labels:
        app: elan-api
    spec:
      containers:
        - name: elan-api
          image: elanacr.azurecr.io/elan-api:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: elan-api-service
  labels:
    app: elan-api
spec:
  type: ClusterIP
  selector:
    app: elan-api
  ports:
    - port: 80
      targetPort: 8080
