Devops/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - elanguages.site
      secretName: tls-secret
  rules:
    - host: elanguages.site
      http:
        paths:
          - path: /sparql-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: elan-api-service
                port:
                  number: 80
          - path: /esolang-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: elan-esolang-api-service
                port:
                  number: 80
