Devops/k8s/site-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - elanguages.site
      secretName: tls-secret
  rules:
    - host: elanguages.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elan-site-service
                port:
                  number: 80
